<resources>
    <string name="app_name">RaiseAnimal</string>
    <string name="next_page">下一頁</string>
    <string name="home_of_animal">動物之家(非官方)</string>
    <string name="animal">動物</string>
    <string name="personal">個人</string>
    <string name="staff">志工</string>
    <string name="test_btn">測試用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shelter">新北市板橋區公立動物之家</string>
    <string name="not_provide">尚未提供</string>
    <string name="dog">狗</string>
    <string name="information">宣導事項</string>
    <string name="go_select">帶我回家</string>
    <string name="no_show_again">不再顯示</string>
    <string name="i_know">我知道了</string>
    <string name="all_information">●●認養資格 \n1. 需年滿20歲 \n2. 攜帶你的 [身分證] 和狗的 [牽繩或提籠]\n\n●●認養方式 \n請於動物之家開放時間內前往看狗 \n有意願認養即可現場辦理認養手續 \n((認養不能預約，不能保留，以現場辦理為主))  \n\n●●新北市目前認養不用費用，但請務必考慮清楚，毛小孩有10-15年的壽命，一輩子有很多花費，認養了就要對他負責!!</string>
    <string name="no_sex">是否已結育 : </string>
    <string name="size">體型 :</string>
    <string name="sex">性別 :</string>
    <string name="color">毛色 :</string>
    <string name="search_no_data">查無資料唷</string>
    <string name="favorite">最愛</string>
    <string name="open_filter">篩選</string>
    <string name="close_filter">關閉篩選</string>
    <string name="email">寄信</string>
    <string name="email_body">若有任何意見跟問題可以寫在這寄給我唷,我會依依的回覆.</string>
    <string name="question_report">我對這個APP有意見!</string>
    <string name="basic">聯絡</string>
    <string name="vip">志工專區</string>
    <string name="staff_place">志工專區</string>
    <string name="account">帳號 :</string>
    <string name="enter_account">請輸入帳號</string>
    <string name="enter_password">請輸入密碼</string>
    <string name="login">登入</string>
    <string name="add_favorite">我的最愛還沒有任何狗狗唷.</string>
    <string name="staff_edit">志工編輯區</string>
    <string name="edit_name">編輯狗狗名字</string>
    <string name="edit_photo">點我選擇狗狗的照片</string>
    <string name="edit_personality">編輯狗狗的個性</string>
    <string name="edit_story">編輯狗狗的故事</string>
    <string name="edit_save">點我編輯完成</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="change_name">更改名字</string>
    <string name="enter_personality">輸入你要的個性(已逗點(,)做區隔)</string>
    <string name="change_personality">更改個性TAG</string>
    <string name="changet_story">更改故事</string>
    <string name="home_of_animal_official">名稱 : 新北市板橋區動物之家</string>
    <string name="address">地址 : 220新北市板橋區板城路28-1號</string>
    <string name="phone">電話 : 02-8966-2158</string>
    <string name="open">開放時間:周二~周日\n上午10-12點/下午14-16點</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_permission_map">沒取得權限</string>
    <string name="pre_view">預覽</string>
    <string name="search_data">資料筆數</string>
    <string name="please_entry_search_data">搜尋 : 名字或編號</string>
</resources>
