<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".staff_place.StaffActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/staff_toolbar"
        app:title="@string/staff_edit"
        app:navigationIcon="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        app:layout_constraintTop_toBottomOf="@id/staff_toolbar"
        android:background="@color/grey"
        android:id="@+id/staff_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>


    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/staff_line"
        android:id="@+id/staff_filter_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/staff_total_size"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/staff_filter_recycler_view"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        tools:text="@string/search_data"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/staff_edit_search"
        android:hint="@string/please_entry_search_data"
        app:layout_constraintTop_toTopOf="@id/staff_total_size"
        app:layout_constraintBottom_toBottomOf="@id/staff_total_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/staff_total_size"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/staff_recycler_view"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/staff_total_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"/>

    <ImageView
        app:layout_constraintTop_toTopOf="@id/staff_recycler_view"
        android:contentDescription="@null"
        android:id="@+id/staff_icon"
        android:visibility="gone"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@id/staff_recycler_view"
        app:layout_constraintLeft_toLeftOf="@id/staff_recycler_view"
        app:layout_constraintRight_toRightOf="@id/staff_recycler_view"
        android:src="@drawable/foot_icon"
        android:layout_width="@dimen/normal_icon_size"
        android:layout_height="@dimen/normal_icon_size"/>

    <TextView
        android:id="@+id/staff_search_info"
        android:text="@string/search_no_data"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/staff_icon"
        app:layout_constraintLeft_toLeftOf="@id/staff_icon"
        app:layout_constraintRight_toRightOf="@id/staff_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/staff_progress"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/staff_title"
        app:layout_constraintBottom_toTopOf="@id/staff_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/staff_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/staff_account"
        android:text="@string/account"
        android:layout_marginBottom="45dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/staff_edit_account"
        android:hint="@string/enter_account"
        app:layout_constraintTop_toTopOf="@id/staff_account"
        app:layout_constraintBottom_toBottomOf="@id/staff_account"
        app:layout_constraintLeft_toRightOf="@id/staff_account"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/staff_password"
        android:text="@string/account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/staff_account"
        app:layout_constraintLeft_toLeftOf="@id/staff_account"
        android:layout_marginTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/staff_edit_password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@id/staff_password"
        app:layout_constraintBottom_toBottomOf="@id/staff_password"
        app:layout_constraintLeft_toRightOf="@id/staff_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/staff_btn_login"
        app:layout_constraintTop_toBottomOf="@id/staff_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>