<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".staff_fragment.StaffFragment">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/basic_icon"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/app"
        android:scaleType="centerCrop"
        android:layout_width="@dimen/big_icon"
        android:layout_height="@dimen/big_icon"/>

    <TextView
        android:id="@+id/basic_title"
        app:layout_constraintTop_toBottomOf="@id/basic_icon"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/home_of_animal_official"
        android:textColor="@color/black"
        android:textSize="@dimen/big_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/basic_address"
        android:text="@string/address"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/basic_title"
        app:layout_constraintLeft_toLeftOf="@id/basic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/basic_phone"
        android:text="@string/phone"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/basic_address"
        app:layout_constraintLeft_toLeftOf="@id/basic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/basic_open"
        android:text="@string/open"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/basic_phone"
        app:layout_constraintLeft_toLeftOf="@id/basic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>